# drone-stream-parser

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  requirements.md
ai-docs/: architecture.md
ai-docs/adr/: ADR-001-pragmatic-clean-architecture.md  ADR-002-domain-model-design.md  ADR-003-alert-threshold-configuration.md  ADR-004-port-and-interface-design.md  ADR-005-error-handling-strategy.md  ADR-006-concurrency-model-and-data-flow.md  ADR-007-blocking-queue-as-common-utility.md  ADR-008-wire-format-and-crc.md  ADR-009-state-machine-parser-design.md  ADR-010-test-strategy-and-framework.md  ADR-011-project-structure.md  ADR-012-logging-with-spdlog.md
ai-docs/c4/: code.md  component.md  container.md  context.md
ai-docs/planning/active/: master-plan.md  phase-3-protocol-boundary.md  phase-5-review-fixes.md  phase-5-server-infrastructure.md
ai-docs/planning/completed/: phase-2-domain-boundary.md  phase-4-common-utility.md  phase-6-client-binary.md
client/: CMakeLists.txt
client/include/: packet_builder.hpp
client/src/: main.cpp  packet_builder.cpp
cmake/: dev-mode.cmake  format-changed.cmake  lint-targets.cmake  lint.cmake  variables.cmake
common/: CMakeLists.txt
common/include/: blocking_queue.hpp  unique_socket.hpp
domain/: CMakeLists.txt
domain/include/: alert_policy.hpp  alert_types.hpp  drone.hpp  i_alert_notifier.hpp  i_drone_repository.hpp  process_telemetry.hpp  telemetry.hpp
domain/src/: drone.cpp  process_telemetry.cpp
protocol/: CMakeLists.txt
protocol/include/: crc16.hpp  packet_deserializer.hpp  packet_serializer.hpp  protocol_constants.hpp  stream_parser.hpp  telemetry_parser.hpp
protocol/src/: crc16.cpp  packet_deserializer.cpp  packet_serializer.cpp  stream_parser.cpp  stub.cpp  telemetry_parser.cpp
server/: CMakeLists.txt
server/include/: console_alert_notifier.hpp  in_memory_drone_repo.hpp  signal_handler.hpp  tcp_server.hpp
server/src/: console_alert_notifier.cpp  in_memory_drone_repo.cpp  main.cpp  signal_handler.cpp  tcp_server.cpp
tests/: CMakeLists.txt
tests/client/: packet_builder_test.cpp
tests/common/: blocking_queue_test.cpp
tests/domain/: drone_test.cpp  process_telemetry_test.cpp
tests/domain/fakes/: fake_alert_notifier.hpp  fake_drone_repository.hpp
tests/protocol/: crc16_test.cpp  deserializer_test.cpp  parser_test.cpp  serializer_test.cpp
tests/src/: stub_test.cpp
